--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@vimeo/player": "^2.15.0",
-    "d3": "^6.5.0"
+    "d3": "^6.5.0",
+    "gulp-minify": "^3.1.0"
   }
 }
